--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -12,13 +12,23 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Set .NET version to use
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '6.0.100'
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
+
       - name: Build
         run: dotnet build -c ${{ matrix.config }}
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
+
+      - name: Run .NET Code Analysis
+        uses: dotnet/code-analysis@main
+        id: code-analysis
+        with:
+          build-breaking: false
+
+      - name: Upload analysis results
+        uses: actions/upload-artifact@v2
+        with:
+          name: analysis_results.sarif
+          path: ${{ steps.code-analysis.outputs.sarifFile }}
